...
    private let avatarImageView: UIImageView = {
        let avatarImage = UIImage(named: "Photo")
        let view = UIImageView()
        view.image = avatarImage
        view.layer.masksToBounds = true
        view.layer.cornerRadius = 35
        view.accessibilityIdentifier = "avatar image"
        return view
    }()
    
    private let nameLabel: UILabel = {
        let view = UILabel()
        view.text = "Екатерина Новикова"
...
        let image = UIImage(named: "Exit")
        guard let image = image else {
            return UIButton()
        }
        let view = UIButton.systemButton(with: image, target: nil, action: #selector(didClickExitButton))
        view.tintColor = .red
        view.accessibilityIdentifier = "logout button"
        return view
    }()
    
    // MARK: - Public Methods
    override func viewDidLoad() {
        super.viewDidLoad()
...
